[package]
name = "php-rs"
version = "0.1.0"
authors = ["Jin Hu <bixuehujin@gmail.com>"]
keywords = ["php", "php-extension"]
description = "A library to build PHP extensions in Rust."
license = "MIT"
repository = "https://github.com/rethinkphp/php-rs"
edition = "2018"

[dependencies]
libc = "0.2.0"

[lib]
name = "php"

